--- a/index.html.html
+++ b/index.html.html
@@ -6,12 +6,19 @@
     <title>Portifólio</title>
 </head>
 <body>
-    <h1> Título 1 - o mais importante </h1>
-    <h2> Título 2 - o segundo mais importante </h2>
-    <h3> Título 3 - o terceiro mais importante </h3>
+    <h1 style="color: blueviolet;"> Título 1 - o mais importante </h1>
+    <h2 style="background-color:antiquewhite"   : ;> Título 2 - o segundo mais importante </h2>
+    <h3 style="border-color: rgb(0, 0, 223);"> Título 3 - o terceiro mais importante </h3>
     <h4> Título 4 - o quarto mais importante </h4>
     <h5> Título 5 - o quinto mais importante </h5>
     <h6> Título 6 - sexto o mais importante </h6>
+    <img src="/images.jfif"alt="imagem de um gato"
+    style="border-radius: 20px">
+    <br>
+    <br>
+    <br>
+    <a href="https://www.google.com" target= "blank_">Google</a>
+    <a href="/pagina1.html">clique aqui</a>
     <p> Este é um parágrafo de exemplo para o portifólio.
        <br>
        <br>
